# seecr-testtools

./: README.md  pyproject.toml
doc/: license.conf
seecr/: __init__.py
seecr/testtools/: __init__.py  __version__.py  _any.py  _any_test.py
