[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "seecr-testtools"
authors = [
    {name = "Thijs Janssen", email = "thijs@seecr.nl"},
]
description = "Test tools for seecr"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["test", "pytest"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pytest",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "seecr.testtools.VERSION"}

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

